fixed main-feature-photo spacing with the next section with a media query over 363px to 783px

--- a/styles/_main.sass
+++ b/styles/_main.sass
@@ -483,3 +483,16 @@
                 display: block
 
 
+@media screen and (min-width: 363px) and (max-width: 487px)
+
+    .main
+
+        &__feature-photo
+            margin-bottom: -50px
+
+@media screen and (min-width: 488px) and (max-width: 783px)
+
+    .main
+
+        &__feature-photo
+            margin-bottom: -120px
